--- a/package.json
+++ b/package.json
@@ -21,8 +21,13 @@
     "@syncfusion/ej2-angular-base": "^21.1.38",
     "@syncfusion/ej2-angular-buttons": "^21.1.37-ngcc",
     "@syncfusion/ej2-angular-charts": "^21.1.41",
+    "@syncfusion/ej2-angular-grids": "^21.1.41",
+    "@syncfusion/ej2-angular-inputs": "^21.1.39",
     "@syncfusion/ej2-angular-layouts": "^21.1.37-ngcc",
+    "@syncfusion/ej2-angular-lists": "^21.2.3-ngcc",
     "@syncfusion/ej2-angular-navigations": "^21.1.39-ngcc",
+    "@syncfusion/ej2-angular-popups": "^21.1.41",
+    "@syncfusion/ej2-angular-progressbar": "^21.2.3",
     "@syncfusion/ej2-base": "^21.1.40",
     "@syncfusion/ej2-material-theme": "^21.1.39",
     "rxjs": "~7.8.0",
